Add goals CRUD support
